--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "vue-devtools": "5.1.3",
     "vuetify": "2.2.15",
     "webpack": "4.41.6",
-    "webpack-node-externals": "1.7.2"
+    "webpack-node-externals": "1.7.2",
+    "fxbjs": "zetadrums/fxbjs"
   },
   "dependencies": {
     "electron-store": "^5.1.1",
