--- a/config.yaml
+++ b/config.yaml
@@ -19,7 +19,7 @@ categories:
   - Jazz
   - Country
   - Raggae
-  - Eletronic
+  - Electronic
 kits:
-  current: test copy 3
+  current: null
   currentPerformance: -1
