--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "electron-builder": "22.3.2",
     "electron-debug": "3.0.1",
     "electron-rebuild": "^1.10.0",
+    "fxbjs": "zetadrums/fxbjs",
     "node-sass": "4.13.1",
     "nuxt": "2.11.0",
     "roboto-fontface": "0.10.0",
@@ -44,13 +45,13 @@
     "vue-devtools": "5.1.3",
     "vuetify": "2.2.15",
     "webpack": "4.41.6",
-    "webpack-node-externals": "1.7.2",
-    "fxbjs": "zetadrums/fxbjs"
+    "webpack-node-externals": "1.7.2"
   },
   "dependencies": {
     "electron-store": "^5.1.1",
     "js-yaml": "^3.13.1",
     "osc": "^2.4.0",
-    "serialport": "^8.0.7"
+    "serialport": "^8.0.7",
+    "uuid": "^8.0.0"
   }
 }
